--- a/appspec.yml
+++ b/appspec.yml
@@ -5,6 +5,9 @@ files:
     destination: /var/www/html/
 hooks:
   BeforeInstall:
+    - location: scripts/remove_existing_file.sh
+      timeout: 300
+      runas: root
     - location: scripts/install_dependencies
       timeout: 300
       runas: root
@@ -15,4 +18,3 @@ hooks:
     - location: scripts/stop_server
       timeout: 300
       runas: root
-
