--- a/appspec.yml
+++ b/appspec.yml
@@ -5,7 +5,7 @@ files:
     destination: /var/www/html/
 hooks:
   BeforeInstall:
-    - location: scripts/remove_existing_file.sh
+    - location: scripts/remove_existing_file
       timeout: 300
       runas: root
     - location: scripts/install_dependencies
